# olmsted-cli

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  FORMATS.md  MANIFEST.in  Makefile  README.md  RELEASING.md  compare_pcp_trees.py  extract_complete_families.py  pyproject.toml  pytest.ini  requirements.txt  test_medium_pcp.csv
.claude/: settings.local.json
.github/workflows/: release.yml
example-data/: README.md
example-data/airr/: airr-olmsted-golden.json
example-data/airr/split-golden-data/: clones.test-input-2020.01.30.json  datasets.json
example-data/fields-config/: README.md  config.yaml  input-airr.json  input-olmsted.json  input-pcp.csv  input-trees.csv
example-data/merge/: input-olmsted.json  merge-olmsted-golden.json
example-data/mutations/: input-olmsted.json  mutations-config.yaml
example-data/pcp/: pcp-olmsted-golden.json
example-data/pcp-byhand/: README.md  input-pcp.csv  input-trees.csv  pcp-byhand-olmsted-golden.json
example-data/pcp-light/: input-pcp.csv  input-trees.csv  pcp-light-olmsted-golden.json
example-data/pcp-paired/: input-pcp.csv  input-trees.csv  pcp-paired-olmsted-golden.json
example-data/pcp/split-golden-data/: clones.dataset-14b429db-6afa-5d76-5c16-dd7dab2897af.json  datasets.json  tree.tree-0439a72b-ba3b-8f9c-b110-04b80e2b9f95.json  tree.tree-0c29513f-8d41-8df5-ac4c-443d4871fe23.json  tree.tree-0e14038f-ac80-8a35-ebb7-2c1b76345a46.json  tree.tree-1009d173-85e1-5593-e2ec-8a895954ecab.json  tree.tree-122c6f7f-bd3e-46f6-0113-bb7303ccdfef.json  tree.tree-143527ad-141d-ad82-5ee2-7683978b2905.json  tree.tree-1f9dbf6c-d601-bcfa-ec02-57c72ee6a2e9.json  tree.tree-27f6563d-c175-8e5c-5226-a27d4e4b3876.json  tree.tree-2cea4fb5-578e-13af-c10b-350fff8f29a3.json  tree.tree-2e1ba22a-698b-b8a4-c360-0edfaf1a76d8.json  tree.tree-376d1d56-79ef-60c2-7b62-3d2ef11be6cb.json  tree.tree-3ebb9203-9734-6dee-aa6c-0abe8e8f690d.json  tree.tree-4b9ac338-8bbc-6669-41e6-face81dae39b.json  tree.tree-4c247208-9d1c-b8f1-5aa4-5bf50526b6fe.json  tree.tree-4e789983-4517-bda3-11cf-1d3f636ac5dc.json  tree.tree-522fac7a-4689-e49a-05d1-9353af02f885.json  (+16 more)
example_data/: README.md
example_data/airr/: airr--fields.yaml  airr-olmsted-golden.json  consolidated_golden_data.json
example_data/merge/: mutations.csv  olmsted_input.json
example_data/pcp/: clones.csv  consolidated_golden_data.json  medium_pcp_dataset.csv  pcp-olmsted-golden.json  pcp_olmsted_golden.json  trees.csv
example_data/pcp-byhand/: README.md  SPEC.md  pcp-byhand-olmsted-golden.json  pcp.csv  trees.csv
example_data/pcp-eyetest/: README.md  output.json  pcp-eyetest.json  pcp.csv  trees.csv
example_data/pcp-light/: README.md  pcp-light-olmsted-golden.json  pcp.csv
example_data/pcp-paired/: README.md  pcp--fields.yaml  pcp-paired-olmsted-golden.json  pcp-paired-olmsted.json  pcp-paired_olmsted_golden.json  pcp.csv  trees.csv
example_data/pcp_backup_small/: medium_pcp_dataset.csv
example_data/surprise/: surprise_config.yaml  surprise_subset.json
example_data/test-fields/: README.md  airr-test-fields.json  olmsted-test-fields.json  pcp-test-fields.csv  test-fields-config.yaml  trees-test-fields.csv
medium_families_output/: clones.pcp-14b429db-6afa-5d76-5c16-dd7dab2897af.json  tree.0439a72b-ba3b-8f9c-b110-04b80e2b9f95.json  tree.143527ad-141d-ad82-5ee2-7683978b2905.json  tree.38df5d3a-b824-4bde-6380-04ee71f7ed33.json  tree.4b9ac338-8bbc-6669-41e6-face81dae39b.json  tree.522fac7a-4689-e49a-05d1-9353af02f885.json  tree.649adb59-d0c9-dfa7-81a5-9d756e4ee282.json  tree.8d94ddd8-3411-9628-ac6a-1999d4a60bfb.json  tree.e1d3a8ff-b4f1-0ab0-8d02-82857d1389c0.json
olmsted_cli/: __init__.py  api.py  build_config.py  cli.py  column_resolution.py  compat.py  constants.py  data_io.py  deploy.py  dump_fields.py  enrich.py  field_metadata.py  format_detection.py  identifier.py  merge.py  merge_mutations.py  metrics.py  process_airr_data.py  process_cft_data.py  process_data.py  process_pcp_data.py  process_utils.py  schemas.py  split.py  streaming.py  summary.py  tag.py  types.py  utils.py  validate.py  validate_command.py  version.py
olmsted_cli/configs/: __init__.py  airr.yaml  pcp.yaml
olmsted_cli/configs/templates/: header.yaml  (+5 more)
olmsted_cli/schemas/: clone.schema.json  clone.schema.yaml  dataset.schema.json  dataset.schema.yaml  node.schema.json  node.schema.yaml  olmsted-schema.json  olmsted-schema.yaml  tree.schema.json  tree.schema.yaml
scripts/: benchmark_batch_memory.py
tests/: README_json_diff.md  __init__.py  conftest.py  test_batching_airr.py  test_batching_mutations.py  test_batching_pcp.py  test_branch_lengths.py  test_build_config.py  test_cli_processing.py  test_clone_group_iterators.py  test_column_resolution.py  test_config.py  test_data_io.py  test_dump_fields.py  test_enrich.py  test_field_metadata.py  test_format_detection.py  test_gzip_io.py  test_identifier.py  test_merge.py  test_merge_fixture.py  test_multi_tree.py  test_output_shape.py  test_pcp_extras.py  test_pcp_multi_tree.py  test_schema_freshness.py  test_streaming.py  test_streaming_uniqueness.py  test_tag.py  test_uniqueness.py  test_validation.py
(+94 files in other folders)
