[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olmsted-cli"
version = "0.1.0"
description = "Command-line interface for Olmsted data processing"
readme = "README.md"
authors = [
    {name = "Matsen Lab"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "ete3>=3.1.3",
    "jsonschema>=4.17.3",
    "lxml>=4.9.2",
    "numpy>=1.24.3",
    "pyyaml>=6.0",
    "scipy>=1.10.1",
    "boto3>=1.26.137",
    "botocore>=1.29.137",
    "ntpl>=0.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
olmsted = "olmsted_cli.cli:main"

[project.urls]
"Homepage" = "https://github.com/matsengrp/olmsted-cli"
"Bug Tracker" = "https://github.com/matsengrp/olmsted-cli/issues"
"Source" = "https://github.com/matsengrp/olmsted-cli"

[tool.setuptools]
packages = ["olmsted_cli"]
include-package-data = true

[tool.setuptools.package-data]
"olmsted_cli" = ["*.py"]

# Ruff configuration
[tool.ruff]
line-length = 88  # Match black
target-version = "py38"

# Exclude external code directories
exclude = [
    "airr-standards/",
]

[tool.ruff.lint]
# Enable similar rules to loris-experiments
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
]
ignore = [
    "E731", "E501", "E203", "E266",  # Match loris-experiments ignores
    "E402", "F541"
]
mccabe.max-complexity = 30  # Match loris-experiments setting

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"