[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

# Version is derived from the latest git tag (e.g. v0.4.0 -> 0.4.0) by
# setuptools-scm. There is no static version here on purpose: the tag is the
# single source of truth, and the release workflow publishes on tag push.
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project]
name = "olmsted-cli"
dynamic = ["version"]
description = "Command-line interface for Olmsted data processing"
readme = "README.md"
authors = [
    {name = "Matsen Lab"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "ete3>=3.1.0",
    # ete3 imports `six` at module load (ncbi_taxonomy) but declares no
    # dependencies of its own, so we must require it explicitly — otherwise a
    # fresh install fails with ModuleNotFoundError: six.
    "six>=1.16.0",
    "jsonschema>=4.0.0",
    "lxml>=4.6.0",
    "numpy>=1.20.0",
    "pyyaml>=6.0",
    "scipy>=1.7.0",
    "ntpl>=0.0.4",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
olmsted = "olmsted_cli.cli:main"

[project.urls]
"Homepage" = "https://github.com/matsengrp/olmsted-cli"
"Bug Tracker" = "https://github.com/matsengrp/olmsted-cli/issues"
"Source" = "https://github.com/matsengrp/olmsted-cli"

[tool.setuptools]
packages = ["olmsted_cli", "olmsted_cli.configs"]
include-package-data = true

[tool.setuptools.package-data]
"olmsted_cli" = ["*.py", "configs/*.yaml", "configs/templates/*.yaml"]

# Ruff configuration
[tool.ruff]
line-length = 88  # Match black
target-version = "py38"

# Exclude external code directories
exclude = [
    "airr-standards/",
]

[tool.ruff.lint]
# Enable similar rules to loris-experiments
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
]
ignore = [
    "E731", "E501", "E203", "E266",  # Match loris-experiments ignores
    "E402", "F541"
]
mccabe.max-complexity = 30  # Match loris-experiments setting

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"